# character

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: __init__.py  chat.py  debug.py
app/routes/: chat.py  debug.py
app/scripts/: init_vector_store.py  vectorize_chat_history.py
app/services/: chat_history.py  emotion_analyzer.py  prompt_service.py  vector_store.py
static/: debug.html  index.html
static/css/: debug.css  style.css
static/js/: debug.js  script.js
