[tool.poetry]
name = "character"
version = "0.1.0"
description = ""
authors = ["joosomi <wnthal1211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
openai = "^1.64.0"
dotenv = "^0.9.9"
langchain = "^0.3.19"
langchain-openai = "^0.3.7"
faiss-cpu = "^1.10.0"
tiktoken = "^0.9.0"
pymongo = "^4.11.1"
langchain-community = "^0.3.18"
black = "^25.1.0"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
